Actualizando el color de mi codigo semana 3

--- a/src/main/resources/templates/multimedia.html
+++ b/src/main/resources/templates/multimedia.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
-<!-- Esto es un comentario...  -->
 <html>
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link href="/css/estilos.css" rel="stylesheet" type="text/css"/>
         <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
+
     </head>
     <body>
-       <header>
-            <nav>
-                <a class="logo nav-link" href="/">TechShop</a>
-                <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-link menu-item" href="/ejemplo2">Mis Autos</a></li>
-                    <li class="nav-menu-item"><a class="nav-link menu-item" href="/multimedia">Multimedia</a></li>
-                    <li class="nav-menu-item"><a class="nav-link menu-item" href="/iframes">iFrames</a></li>
-                </ul>
-            </nav>
+        <header>
+            <h1>Multimedia</h1>
         </header>
+
         <aside>
             <h1>Multimedia</h1>
             <p>Incorporación de recursos multimedia en el sitio web...</p>
         </aside>
+
         <section>
             <h2>Uso de Multimedia</h2>
+
             <article>
                 <h3>Música Celta</h3>
                 <audio controls>
@@ -31,6 +26,7 @@
                     Your browser does not support the <code>audio</code> tag.
                 </audio>
             </article>
+
             <article>
                 <h3>Película de Acción</h3>
                 <video width="320" height="240" controls>
@@ -39,6 +35,7 @@
                 </video>
             </article>
         </section>
+
         <footer>
             Todos los Derechos Reservados TechShop 2025 &COPY;
         </footer>
