--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml"
+
       xmlns:th="http://www.thymeleaf.org"
+
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{general/fragmentos :: head}"/>
+
+    <head th:replace="~{general/fragmentos :: head}">
+
+        <title>TechShop</title>
+
+        <meta charset="UTF-8" />
+
+    </head>
+
     <body>
+
         <header th:replace="~{general/fragmentos :: header}"/>
-        
+
+        <main class="container mt-5"> <section>
+
+                <h2>[[#{carrito.titulo}]]</h2>
+
+            </section>
+
+        </main>
+
         <footer th:replace="~{general/fragmentos :: footer}"/>
+
     </body>
+
 </html>
