--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -2,7 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{general/plantilla :: head}"/>
+    <head th:replace="~{general/fragmentos :: head}">
+        <title>Tienda</title>
+        
+    </head>
+
 
     <body>
         <!-- fragmento 1 para Agregar categoria en ventana modal -->
