--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
       xmlns:th="http://www.thymeleaf.org"
 
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    <link href="/css/estilos.css" rel="stylesheet" type="text/css"/>
 
     <head th:replace="~{general/fragmentos :: head}">
 
