--- a/src/main/resources/templates/general/fragmentos.html
+++ b/src/main/resources/templates/general/fragmentos.html
@@ -9,14 +9,17 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png"/>
         <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png"/>
         <link rel="icon" type="image/png" sizes="96x96" href="/fav/favicon-96x96.png"/>
-        <link rel="icon" type="image/png" sizes="256x256" href="/fav/favicon-256x256.png"/>
+        <link rel="icon" type="image/png" sizes="256x256" href="/fav/favicon-256x256.png"/>  
 
-        <link th:href="@{/webjars/font-awesome/6.5.1/css/all.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet"/>
-        <script th:src="@{/webjars/jquery/3.7.1/jquery.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.bundle.min.js}"></script>
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+
         <script th:src="@{/js/rutinas.js}"></script>
-        <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
+
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script> 
+        
     </head>
     <body>
         <header th:fragment="header" class="header">
